--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
       },
       "problemMatcher": [],
       "label": "npm: build",
-      "detail": "vite build"
+      "detail": "vite build --emptyOutDir"
     }
   ]
 }
