--- a/package.json
+++ b/package.json
@@ -1,30 +1,21 @@
 {
-  "name": "template-web-min",
   "private": true,
-  "version": "0.0.1",
   "type": "module",
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "@epreston/eslint-config"
-    ],
-    "rules": {
-      "prettier/prettier": "off"
-    }
-  },
+  "name": "template-web-min",
+  "version": "0.0.1",
   "prettier": "@epreston/prettier-config",
   "scripts": {
     "dev": "vite",
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
-    "lint": "eslint --fix --ext .js --report-unused-disable-directives .",
+    "lint": "eslint --fix --report-unused-disable-directives .",
     "format": "prettier --write \"**/*.?(c|m)[tj]s?(x)\""
   },
   "devDependencies": {
-    "@epreston/eslint-config": "^1.1.2",
+    "@epreston/eslint-config": "^2.0.0",
     "@epreston/prettier-config": "^2.0.0",
     "@epreston/tsconfig": "^1.2.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.6.0",
     "prettier": "^3.3.2",
     "vite": "^5.3.3"
   }
