--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "dev": "vite",
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
-    "lint": "eslint --fix --report-unused-disable-directives .",
+    "lint": "eslint --fix .",
     "format": "prettier --write \"**/*.?(c|m)[tj]s\""
   },
   "devDependencies": {
-    "@epreston/eslint-config": "^2.0.0",
+    "@epreston/eslint-config": "^2.1.1",
     "@epreston/prettier-config": "^2.0.0",
-    "@epreston/tsconfig": "^1.2.0",
+    "@epreston/tsconfig": "^1.2.1",
     "eslint": "^9.7.0",
     "prettier": "^3.3.3",
-    "vite": "^5.3.3"
+    "vite": "^5.3.4"
   }
 }
