--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --emptyOutDir",
-    "lint": "eslint --fix .",
-    "format": "prettier --write \"**/*.?(c|m)[tj]s\""
+    "lint": "eslint .",
+    "format": "prettier --check \"**/*.[tj]s\""
   },
   "devDependencies": {
     "@epreston/eslint-config": "^2.1.1",
