--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint": "^9.7.0",
     "prettier": "^3.3.3",
     "vite": "^5.3.4"
+  },
+  "engines": {
+    "node": "^18.20.4 || ^20.15.1 || >=22.5.0"
   }
 }
