--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "name": "template-web-min",
   "version": "0.0.1",
+  "packageManager": "npm@10.7.0",
   "prettier": "@epreston/prettier-config",
   "scripts": {
     "dev": "vite",
