--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,7 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Basics
-.env
-.npm
+# not tracked by version control
+.DS_Store
 node_modules
 dist
-*.local
-
-# Editor directories and files
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
 # ignore non-npm lockfiles
 pnpm-lock.yaml
